# TasksAPI

./: .gitignore  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml
functional_tests/: test_tasks.py
tasks/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20211028_0654.py  0003_task_owner.py  0004_alter_task_owner.py  0005_alter_task_owner.py
tasks/tests/: test_models.py  test_services.py  test_views.py
tasks_list/: asgi.py  settings.py  urls.py  wsgi.py
