[tool.poetry]
name = "tasks_list_api"
version = "0.1.0"
description = ""
authors = ["Artemowkin <artyom.groshev2017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
django-cors-headers = "^3.10.0"
dj-rest-auth = "^2.1.11"
django-allauth = "^0.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
